Bug 88087 - Missing varargs cleanup
Summary: Missing varargs cleanup
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact: D-Bus Maintainers
URL:
Whiteboard: review?
Keywords: patch
Depends on:
Blocks:
 
Reported: 2015-01-06 04:00 UTC by Joshua Rogers
Modified: 2015-01-29 12:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
_dbus_string_append_printf_valist: avoid leaking copy of varargs (1.31 KB, patch)
2015-01-06 22:47 UTC, Simon McVittie
Details | Splinter Review

Description Joshua Rogers 2015-01-06 04:00:02 UTC
Hi,

In two places, there is a missing va_end.

/dbus/dbus-string.c:
1087    return FALSE;


and

/bus/selinux.c:
160      return;



Thanks,
Comment 1 Simon McVittie 2015-01-06 22:47:19 UTC
Created attachment 111872 [details] [review]
_dbus_string_append_printf_valist: avoid leaking copy of  varargs

---

Fixed the other one in git for 1.9.8 immediately, since the fix was so trivial.

Review required.
Comment 2 Simon McVittie 2015-01-29 12:18:55 UTC
(In reply to Simon McVittie from comment #1)
> Review required.

3 weeks later, timed out and pushed it anyway.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.