selinux: avoid leaking on systems where va_start allocates memory

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=88087